# qrine

./: CONTEXT.md  README.md  philosophy.md  pyproject.toml  qrine
src/: __init__.py  cli.py  diagnostics.py  engine.py  parser.py  tokenizer.py
src/rules/: __init__.py  cross_join.py  debug_print.py  delete_without_where.py  exit_in_function.py  function_many_params.py  global_amend_in_function.py  hopen_not_closed.py  hopen_string_arg.py  implicit_global.py  nested_each.py  null_comparison.py  overlong_line.py  peach_shared_state.py  protected_namespace.py  reserved_word.py  reval_usage.py  select_without_from.py  shadow_global.py  system_call.py  unused_var.py  update_without_where.py  value_execution.py
